--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chance": "^1.1.7",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "express": "^4.17.1",
     "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
